--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "0.21.1",
+    "googletrans": "^1.0.4",
+    "i18next": "^23.7.7",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "next": "14.0.3",
+    "next-i18next": "^15.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-i18next": "^13.5.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
